--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,16 +5,22 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  schedule:
+    - cron: '17 2 * * *'
 
 jobs:
   test:
-
-    runs-on: ubuntu-latest
-
+    runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
-        node-version: [12.x, 14.x, 15.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        node-version:
+          - 14
+          - 16
+          - 17
+        os:
+          - ubuntu-latest
+          - windows-latest
 
     steps:
       - uses: actions/checkout@v2
@@ -22,5 +28,15 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm ci
+      - run: npm i
       - run: npm test
+      - run: npm run eslint
+        if: ${{ matrix.node-version == '16' && matrix.os == 'ubuntu-latest' }}
+      - name: Publish codeclimate code coverage
+        if: ${{ matrix.node-version == '16' && matrix.os == 'ubuntu-latest' }}
+        uses: paambaati/codeclimate-action@v3.0.0
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageLocations: |
+            ${{github.workspace}}/coverage/lcov.info:lcov
