--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "website-scraper": "^4.0.0"
   },
   "devDependencies": {
+    "c8": "^7.10.0",
     "chai": "^4.2.0",
     "finalhandler": "^1.1.2",
     "fs-extra": "^7.0.1",
@@ -28,7 +29,8 @@
     "website-scraper": "^4.0.0"
   },
   "scripts": {
-    "test": "mocha --timeout 10000 --exit"
+    "test": "c8 --all --reporter=text --reporter=lcov mocha --recursive --timeout 10000",
+    "eslint": "eslint lib/** index.js"
   },
   "repository": {
     "type": "git",
@@ -42,5 +44,8 @@
   "homepage": "https://github.com/website-scraper/website-scraper-puppeteer#readme",
   "files": [
     "lib"
-  ]
+  ],
+  "engines": {
+    "node": ">=14"
+  }
 }
