--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.5",
   "description": "Plugin for website-scraper which returns html for dynamic websites using puppeteer",
   "readmeFilename": "README.md",
-  "main": "lib/index.js",
+  "type": "module",
+  "exports": {
+    ".": "./lib/index.js"
+  },
   "keywords": [
     "website-scraper",
     "puppeteer",
