--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,6 +21,9 @@ jobs:
         os:
           - ubuntu-latest
           - windows-latest
+        include:
+          - node-version: 16
+            os: macos-latest
 
     steps:
       - uses: actions/checkout@v2
