--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "website-scraper-puppeteer",
-  "version": "0.1.5",
+  "version": "1.0.0",
   "description": "Plugin for website-scraper which returns html for dynamic websites using puppeteer",
   "readmeFilename": "README.md",
-  "main": "lib/index.js",
+  "type": "module",
+  "exports": {
+    ".": "./lib/index.js"
+  },
   "keywords": [
     "website-scraper",
     "puppeteer",
@@ -17,7 +20,7 @@
     "puppeteer": "^13.0.1"
   },
   "peerDependencies": {
-    "website-scraper": "^4.0.0"
+    "website-scraper": "^5.0.0"
   },
   "devDependencies": {
     "c8": "^7.10.0",
@@ -27,7 +30,7 @@
     "fs-extra": "^10.0.0",
     "mocha": "^9.1.3",
     "serve-static": "^1.13.2",
-    "website-scraper": "^4.0.0"
+    "website-scraper": "^5.0.0"
   },
   "scripts": {
     "test": "c8 --all --reporter=text --reporter=lcov mocha --recursive --timeout 10000",
@@ -47,6 +50,6 @@
     "lib"
   ],
   "engines": {
-    "node": ">=14"
+    "node": ">=14.14"
   }
 }
