--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,7 +39,7 @@ jobs:
         if: ${{ matrix.node-version == '16' && matrix.os == 'ubuntu-latest' }}
         uses: paambaati/codeclimate-action@v3.0.0
         env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+          CC_TEST_REPORTER_ID: 150be11cde8a18d41d37df6c31823d35892fdd1dbf79c969142c6b3033104e46
         with:
           coverageLocations: |
             ${{github.workspace}}/coverage/lcov.info:lcov
