--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "debug": "^4.1.1",
-    "puppeteer": "^20.1.1"
+    "puppeteer": "20.1.*"
   },
   "peerDependencies": {
     "website-scraper": "^5.0.0"
