Extend list of nodejs versions to test

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,7 +18,9 @@ jobs:
         node-version:
           - 14
           - 16
-          - 17
+          - 18
+          - 20
+          - current
         os:
           - ubuntu-latest
           - windows-latest
