--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,6 +7,7 @@ on:
     branches: [ master ]
   schedule:
     - cron: '17 2 * * *'
+  workflow_dispatch: ~
 
 jobs:
   test:
@@ -16,8 +17,6 @@ jobs:
       fail-fast: false
       matrix:
         node-version:
-          - 14
-          - 16
           - 18
           - 20
           - current
@@ -25,7 +24,7 @@ jobs:
           - ubuntu-latest
           - windows-latest
         include:
-          - node-version: 18
+          - node-version: 20
             os: macos-latest
 
     steps:
@@ -37,9 +36,9 @@ jobs:
       - run: npm i
       - run: npm test
       - run: npm run eslint
-        if: ${{ matrix.node-version == '18' && matrix.os == 'ubuntu-latest' }}
+        if: ${{ matrix.node-version == '20' && matrix.os == 'ubuntu-latest' }}
       - name: Publish codeclimate code coverage
-        if: ${{ matrix.node-version == '18' && matrix.os == 'ubuntu-latest' }}
+        if: ${{ matrix.node-version == '20' && matrix.os == 'ubuntu-latest' }}
         uses: paambaati/codeclimate-action@v5.0.0
         env:
           CC_TEST_REPORTER_ID: 150be11cde8a18d41d37df6c31823d35892fdd1dbf79c969142c6b3033104e46
