--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "type": "git",
     "url": "git+https://github.com/website-scraper/website-scraper-puppeteer.git"
   },
-  "author": "Sofiia Antypenko <sophia@antipenko.pp.ua>",
+  "author": "Sofiia Antypenko <sofiia@antypenko.pp.ua>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/website-scraper/website-scraper-puppeteer/issues"
