--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "debug": "^4.1.1",
-    "puppeteer": "^23.0.*"
+    "website-scraper-puppeteer-compatibility-bridge": "github:website-scraper/website-scraper-puppeteer-compatibility-bridge#main"
   },
   "peerDependencies": {
     "website-scraper": "^5.0.0"
