--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "debug": "^4.1.1",
-    "@website-scraper/puppeteer-version-wrapper": "github:website-scraper/puppeteer-version-wrapper#main"
+    "@website-scraper/puppeteer-version-wrapper": "^0.2"
   },
   "peerDependencies": {
     "website-scraper": "^5.0.0"
