--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "debug": "^4.1.1",
-    "puppeteer": "^23.0.*"
+    "@website-scraper/puppeteer-version-wrapper": "^1.0.0"
   },
   "peerDependencies": {
     "website-scraper": "^5.0.0"
